<resources>
    <string name="app_name">Conclave</string>
    <string name="conclave_tagline">Seamless Entry, Productive Gatherings.</string>
    <string name="google_login">Continue with Google</string>
    <string name="no_account">Don\'t have an account? Sign up here.</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="skip">Skip</string>
    <string name="role_choice_query">Just stepping in, or leading the way?</string>
    <string name="admin">Admin</string>
    <string name="organizer">Organizer</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="date_placeholder">01</string>
    <string name="month_placeholder">January</string>
    <string name="year_placeholder">2024</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="browse_events">Browse Events</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="event_name_query">What is the name of your event?</string>
    <string name="event_name_placeholder">Event Name</string>
    <string name="attendee">Attendee</string>
    <string name="date_and_time">Date and Time</string>
    <string name="date">Date</string>
    <string name="send_announcement_hint">Write announcement</string>
    <string name="edit_event_details">Edit event details</string>
    <string name="event_description">About the event …</string>
    <string name="event_details_title">Title</string>
    <string name="event_details">Event Details</string>
    <string name="multi_day_event">Multi-Day Event?</string>
    <string name="end_date">End Date</string>
    <string name="time_1hr">time + 1hr</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_location">Event Location</string>
    <string name="next">next</string>
    <string name="_25_january">25 January</string>
    <string name="start_date">Start Date</string>
    <string name="_24_january">24 January</string>
    <string name="cancel">Cancel</string>
    <string name="curr_time">curr_time</string>
    <string name="tell_us_about_your_event">Tell us about your event</string>
    <string name="qr_code">QR Code</string>
    <string name="upload_an_event_poster">Upload an Event Poster</string>
    <string name="max_attendees">Max Attendees</string>
    <string name="DateandTime">MM/DD/YYYY 00:00</string>
    <string name="placeholderimage">Placeholder image description</string>
    <string name="smalllogo">small logo</string>
    <string name="biglogo">big logo</string>
    <string name="scan">Scan</string>
    <string name="company">Company</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="blue_square">Blue Square</string>
    <string name="Description">Description</string>
    <string name="Sign_Up">Sign Up For Event</string>
    <string name="current_attendance">Current Attendance</string>
    <string name="event_poster">Event Poster</string>
    <string name="finish">Finish</string>
    <string name="Profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="GeoLocation">Geo Location</string>
    <string name="Notification_Preferences">Notification Preferences</string>
    <string name="discover_events">Discover Events</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="log_out">Log out</string>
    <string name="manage_events">Manage Events</string>
    <string name="enter_the_conclave">Enter the Conclave</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="create_account">Create Account</string>
    <string name="skip_account_creation">Skip account creation</string>
    <string name="phone_number">Phone Number</string>
    <string name="current_attendance_menu">Current Attendance</string>
    <string name="announcements">Announcements</string>
    <string name="sign_ups">Sign Ups</string>
    <string name="geo_check_ins">Geo Check-Ins</string>
    <string name="share_qr_code">Share Promo QR code</string>
    <string name="push_notification">Push Notification</string>
    <string name="browse_event_posters">Browse Event Posters</string>
    <string name="browse_profiles">Browse Profiles</string>
    <string name="browse_Images">Browse Images</string>
    <string name="remove_event_poster">Remove Event Poster</string>
    <string name="remove_event">Delete Event</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="description">Description</string>
    <string name="created_events">Created Events</string>
    <string name="signed_up_events">Signed Up Events</string>
    <string name="_1">1</string>
    <string name="users">Users</string>
    <string name="milestone">Milestone</string>
    <string name="blank_numbers">_ _ _</string>
    <string name="images">Images</string>
    <string name="browse_users">Browse Users</string>
    <string name="administration">Administration</string>
    <string name="admin_roles_description">As an Administrator, harness your control:\n\n  - Browse events, profiles, and images\n  - Remove content at will\n\nDiscover more in the top right menu.</string>
    <string name="delete_user_profile">Delete User Profile</string>
    <string name="proffile_pic_note">Edit or remove profile picture using the options on the image.</string>
    <string name="default_notification_channel_id">your_notification_channel_id</string>
    <string name="google_maps_key">AIzaSyACpWJ8UeqCMkWrP8hmVrTkoJCVSK7OiY4</string>
    <string name="set_milestones">Set Milestones</string>

</resources>