...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.droiddesign.view.Everybody.EventMenuActivity">

    <ImageView
        android:id="@+id/activity_event_menu"
        android:layout_width="845dp"
        android:layout_height="845dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_menu_bar"
        app:srcCompat="@drawable/conclave_logo_large_dark" />
...
        app:layout_constraintEnd_toStartOf="@id/fab_add_event"
        app:layout_constraintBottom_toBottomOf="@id/fab_add_event"
        android:layout_marginEnd="50dp"
        app:backgroundTint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/events_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/top_menu_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <ImageButton
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
...
