...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_button"
        android:layout_width="106dp"
        android:layout_height="108dp"
        android:backgroundTint="@color/bg_dark"
        android:paddingTop="70dp"
        android:text="@string/admin"
        android:textSize="12sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@+id/logo_large_role_selection"
        app:layout_constraintEnd_toStartOf="@+id/organizer_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role_choice_query" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/organizer_button"
        android:layout_width="106dp"
...
